tests/paczka1/fuzzy1/89320628.err
Error in line 2: XpX7M A543 68,6
Error in line 1: ThiblkuUYI A480 47,7
Error in line 4: ThiblkuUYI A495 78,7
Error in line 5: ThiblkuUYI A543 10,2
Error in line 13: ThiblkuUYI A480 75,6
Error in line 17: XpX7M A495 27,4
Error in line 21: Pnc1 A995 56,1
Error in line 22: Pnc1 A543 44,2
Error in line 34: m7Cgg A543 15,6
Error in line 35: m7Cgg A480 91,5
